--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -1,7 +1,6 @@
 {% lang 'system/fields' 'richtext' %}
 
 <!-- load up medium editor -->
-<script src="{{baseurl}}system/js/medium-editor/medium-editor.js"></script>
 <link rel="stylesheet" href="{{baseurl}}system/css/medium-editor/medium-editor.css">
 <link rel="stylesheet" href="{{baseurl}}system/css/medium-editor/themes/bootstrap.css">
 
@@ -9,17 +8,19 @@
 <script>
 	var mediumEditors;
 	if(typeof mediumEditors == 'undefined') mediumEditors = {};
-	mediumEditors['{{field.uid}}'] = new MediumEditor('#medium-editor-{{field.uid}}', {
-		toolbar: {
-			buttons: ['bold', 'italic', 'underline', 'anchor', 'orderedlist', 'unorderedlist', 'h2', 'h3', 'quote', 'removeFormat']
-		},
-		placeholder: {
-	        text: '{{#system_field_richtext_placeholder#}}',
-    	    hideOnClick: true
-    	}
-   	});
-	mediumEditors['{{field.uid}}'].subscribe('editableInput', function(){
-		$('#textarea-{{field.uid}}').html($('#medium-editor-{{field.uid}}').html());
+	requirejs(["system/js/medium-editor/medium-editor"], function(MediumEditor){
+		mediumEditors['{{field.uid}}'] = new MediumEditor('#medium-editor-{{field.uid}}', {
+			toolbar: {
+				buttons: ['bold', 'italic', 'underline', 'anchor', 'orderedlist', 'unorderedlist', 'h2', 'h3', 'quote', 'removeFormat']
+			},
+			placeholder: {
+				text: '{{#system_field_richtext_placeholder#}}',
+				hideOnClick: true
+			}
+		});
+		mediumEditors['{{field.uid}}'].subscribe('editableInput', function(){
+			$('#textarea-{{field.uid}}').html($('#medium-editor-{{field.uid}}').html());
+		});
 	});
 </script>
 <textarea class='ofw-field-text form-control hide' id='textarea-{{field.uid}}' name='{{field.name}}'>{{field.value|safe|escape:'htmlall'}}</textarea>
